# named-chess

./: .gitignore  Improvised changelog.html  Improvised changelog.md  Makefile  Makefile_Linux  Makefile_Windows  README.html  README.md
misc/: Makefile_Linux
misc/res/sources/: board.xcf
misc/stats-viewer/src/: CMakeLists.txt
res/: named-chess.rc
src/: AIPlayer.cpp  AIPlayer.hpp  Board.cpp  Board.hpp  BoardTypes.cpp  BoardTypes.hpp  CMakeLists.txt  Game.cpp  Game.hpp  HumanPlayer.cpp  HumanPlayer.hpp  Piece.cpp  Piece.hpp  Player.cpp  Player.hpp  Utils.cpp  Utils.hpp  main.cpp
stats-viewer/: Makefile
stats-viewer/src/: main.cpp
